syntax = "proto2";
package secret_vault;

service SecretVaultAdmin {
    rpc GetAdminConfig(GetAdminConfigRequest) returns (GetAdminConfigResponse);
    rpc CreateVault(CreateVaultRequest) returns (CreateVaultResponse);
    rpc DeleteVault (DeleteVaultRequest) returns (DeleteVaultResponse);

    rpc AddMetadata (AddMetadataRequest) returns (AddMetadataResponse);
    rpc RemoveMetadata (RemoveMetadataRequest) returns (RemoveMetadataResponse);
    rpc GetMetadata (GetMetadataRequest) returns (GetMetadataResponse);
    rpc UpdateMetadata (UpdateMetadataRequest) returns (UpdateMetadataResponse);
}

message GetAdminConfigRequest {}
message GetAdminConfigResponse {
    required string config = 1;
}

message CreateVaultRequest {
    required string vault_id = 1;
}

message CreateVaultResponse {}

message DeleteVaultRequest {
    required string vault_id = 1;
}

message DeleteVaultResponse {}

message AddMetadataRequest {
    required string vault_id = 1;
    required string name = 2;
    required string value = 3;
}

message AddMetadataResponse {}

message RemoveMetadataRequest {
    required string vault_id = 1;
    required string name = 2;
}

message RemoveMetadataResponse {}

message GetMetadataRequest {
    required string vault_id = 1;
    required string name = 2;
}

message GetMetadataResponse {
    required string value = 1;
}

message UpdateMetadataRequest {
    required string vault_id = 1;
    required string name = 2;
    required string value = 3;
}

message UpdateMetadataResponse {}
