syntax = "proto2";
package secret_vault;

service SecretVault {
    rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
    rpc CreateLocker (CreateLockerRequest) returns (CreateLockerResponse);
    rpc DeleteLocker (DeleteLockerRequest) returns (DeleteLockerResponse);

    rpc AddSecret (AddSecretRequest) returns (AddSecretResponse);
    rpc RemoveSecret (RemoveSecretRequest) returns (RemoveSecretResponse);
    rpc GetSecret (GetSecretRequest) returns (GetSecretResponse);
    rpc UpdateSecret (UpdateSecretRequest) returns (UpdateSecretResponse);
}

message GetConfigRequest {}
message GetConfigResponse {
    required string config = 1;
}

message VaultContext {
    required string vault_id = 1;
    required string user_name = 2;
    required string user_context = 3;
}

message CreateLockerRequest {
    required VaultContext context = 1;
    required string locker_id = 2;
}

message CreateLockerResponse {}

message DeleteLockerRequest {
    required VaultContext context = 1;
    required string locker_id = 2;
}

message DeleteLockerResponse {}

message AddSecretRequest {
    required VaultContext context = 1;
    required string locker_id = 2;
    required string secret_key = 3;
    required string secret_blob = 4;
}

message AddSecretResponse {}

message RemoveSecretRequest {
    required VaultContext context = 1;
    required string locker_id = 2;
    required string secret_key = 3;
}

message RemoveSecretResponse {}

message GetSecretRequest {
    required VaultContext context = 1;
    required string locker_id = 2;
    required string secret_key = 3;
}

message GetSecretResponse {
    required string secret_blob = 1;
}

message UpdateSecretRequest {
    required VaultContext context = 1;
    required string locker_id = 2;
    required string secret_key = 3;
    required string secret_blob = 4;
}

message UpdateSecretResponse {}
